compiler/tests/fixtures/invalid/semantics/salience_non_numeric_expression.viv
// Invalid: non-numeric saliences expression

action bad-sal-expr:
    roles:
        @actor:
            as: initiator
        @target:
            as: recipient
    saliences:
        for _@c:
            true
        end
